@@ -10,6 +10,7 @@ Version 5.4.2 (TBD)
     Fixed list toolbar buttons not showing as active when a list is selected #TINY-6286
     Fixed an issue where the UI would sometimes not be shown or hidden when calling show or hide methods on the editor #TINY-6048
     Fixed the list type style not retained when copying list items #TINY-6289
+    Fixed tabs in plain text converted to a single space and added new `paste_tab_spaces` setting to control how many spaces are used to represent a tab #TINY-6237
 Version 5.4.1 (2020-07-08)
     Fixed the Search and Replace plugin incorrectly including zero-width caret characters in search results #TINY-4599
     Fixed dragging and dropping unsupported files navigating the browser away from the editor #TINY-6027
